--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-type-animation": "^2.1.2",
     "sass": "^1.59.2"
   },
   "devDependencies": {
